fix: code smell